EM-227 Integrate activity API      - Changed the default tab to offender details to get around the show hide stuff being removed.      - Fixed bottom margin on mobile on quicklook and offender details.      - Changed the google analytics description for the booking details tap to offender details.

--- a/app/containers/Bookings/Details/index.scss
+++ b/app/containers/Bookings/Details/index.scss
@@ -1,5 +1,6 @@
 .detail-content {
-  padding-bottom: 40px;
+  margin-bottom: 4em;
+  overflow: hidden;
   width: 100%;
 }
 
